added Bootstrap, Font Awesome and Fancybox

--- a/index.html
+++ b/index.html
@@ -2,32 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Kickstart Page Title</title>
+	<title></title>
 	
+	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen" type="text/css" />
+	<link href="css/font-awesome.min.css" rel="stylesheet" media="screen" type="text/css" />
+	<link href="css/jquery.fancybox.css" rel="stylesheet" media="screen" type="text/css" />
 	<link href="css/screen.css" rel="stylesheet" media="screen" type="text/css" />
-	<link href="css/print.css" rel="stylesheet" media="print" type="text/css" />
 	
 	<meta name="description" content="" />
-	<!-- <meta name="robots" content="index, follow" /> -->
 	
-	<script src="js/html5shiv.js"></script>
 	<script src="js/jquery-1.9.1.min.js"></script>
-	<!-- <script src="js/zepto.js"></script> -->  <!-- lightweight alternative to jQuery -->
+	<script src="js/jquery.fancybox.pack.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script src="js/domscript.js"></script>
-	<script>document.documentElement.className += " js";</script>
-	<!-- <meta content="minimum-scale=1.0, width=device-width, initial-scale=1" name="viewport"> -->
 	
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" />
 </head>
 
-<!--[if lt IE 7]><body class="ie7 ie6"><![endif]-->
-<!--[if IE 7]><body class="ie7"><![endif]-->
-<!--[if gt IE 7]><body><![endif]-->
-<!--[if !IE]><!--><body><!-- <![endif]-->
-
-
-	<!-- Content goes here -->
-
+<body>
+	
+	
+	
 	
 </body>
 </html>
