--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<script src="js/jquery-1.9.1.min.js"></script>
 	<script src="js/jquery.fancybox.pack.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<!--script src="js/bootstrap.min.js"></script!-->
 	<script src="js/domscript.js"></script>
 	
 </head>
