--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
 	<title></title>
 	
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen" type="text/css" />
-	<link href="css/font-awesome.min.css" rel="stylesheet" media="screen" type="text/css" />
-	<link href="css/jquery.fancybox.css" rel="stylesheet" media="screen" type="text/css" />
+	<!--link href="css/font-awesome.min.css" rel="stylesheet" media="screen" type="text/css" /!-->
+	<!--link href="css/jquery.fancybox.css" rel="stylesheet" media="screen" type="text/css" /!-->
 	<link href="css/screen.css" rel="stylesheet" media="screen" type="text/css" />
 	
 	<meta name="description" content="" />
+	<meta name="viewport" content="width=device-width">
 	
 	<script src="js/jquery-1.10.2.min.js"></script>
-	<script src="js/jquery.fancybox.pack.js"></script>
+	<!--script src="js/jquery.fancybox.pack.js"></script!-->
 	<!--script src="js/bootstrap.min.js"></script!-->
+	<!--script src="js/jquery.smooth-scroll.min.js"></script!-->
+	<!--script src="js/jquery.sticky.js"></script!-->
 	<script src="js/domscript.js"></script>
 	
 </head>
