--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<!--script src="js/bootstrap.min.js"></script!-->
 	<!--script src="js/jquery.smooth-scroll.min.js"></script!-->
 	<!--script src="js/jquery.sticky.js"></script!-->
+	<script src="js/retina.min.js"></script>
 	<script src="js/domscript.js"></script>
 	
 </head>
